--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "laravelcollective/html": "^6.4",
         "mailerlite/mailerlite-php": "^1.0"
     },
     "require-dev": {
